[package]
name = "general_parser"
version = "0.1.0"
authors = ["Joshua Warner <joshuawarner32@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
tree-sitter = { path = "tree-sitter" }
walkdir = "2.2.7"
rand = "0.6.5"
failure = "0.1.5"
bit-set = "0.5.0"
structopt = "0.2.14"
structopt-derive = "0.2.14"

[build-dependencies]
cc = "1.0"
