[package]
name = "hornbeam"
version = "0.1.0"
authors = ["Joshua Warner <joshuawarner32@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = ["lang_rust", "lang_python"]
all = [
    "lang_javascript",
    "lang_python",
    "lang_rust",
    "lang_bash",
    "lang_c",
    "lang_cpp",
    "lang_css",
    "lang_go",
    "lang_html",
    "lang_ocaml",
    "lang_php",
    "lang_ruby",
    "lang_typescript",
    "lang_agda",
    "lang_csharp",
    "lang_haskell",
    "lang_java",
    "lang_julia",
    "lang_scala",
]
lang_javascript = []
lang_python = []
lang_rust = []
lang_bash = []
lang_c = []
lang_cpp = []
lang_css = []
lang_go = []
lang_html = []
lang_ocaml = []
lang_php = []
lang_ruby = []
lang_typescript = []
lang_agda = []
lang_csharp = []
lang_haskell = []
lang_java = []
lang_julia = []
lang_scala = []

[dependencies]
tree-sitter = { path = "tree-sitter" }
failure = "0.1.5"
structopt = "0.2.14"
structopt-derive = "0.2.14"
glob = "0.3.0"

[build-dependencies]
cc = "1.0"
